[package]
name = "lafont"
version = "0.0.1"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ia0/lafont"
description = "Animation of Yves Lafont's Interaction Combinators"
include = ["Cargo.toml", "LICENSE", "README.md", "src/main.rs"]

[dependencies]
getopts = "0.2"
kiss3d = "0.16.4"
nalgebra = "0.16.6"
rand = "0.4"
